<resources>
    <string name="app_name">GateWay</string>
    <string name="please_enter_your_code_that_we_have_sent_to_your">Please enter your code that we have sent to your</string>
    <string name="email_address">Email Address</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91_8343214824">+91 8343214824</string>
    <string name="verify">Verify</string>
    <string name="don_t_receive_otp">Don\'t receive OTP</string>
    <string name="resend_code">Resend Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_2">Sign In</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="username">Username</string>
    <string name="password_1">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_1">Sign In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_1">Sign Up</string>
</resources>