<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".OTPVerification">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:maxWidth="140dp"
        android:maxHeight="140dp"
        android:src="@drawable/otp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="OTP Verification"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_your_code_that_we_have_sent_to_your"
        android:textColor="#66000000"
        android:textSize="15sp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/otpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#CC000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/test_gmail_com"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textColor="#66000000"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/otpMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#CC000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/_91_8343214824"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <EditText
            android:id="@+id/otpET1"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:height="80dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/otpET2"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/otpET3"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/otpET4"
            android:layout_width="40dp"
            android:layout_height="70dp"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/VerifyBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_back_primary"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/don_t_receive_otp"/>

        <TextView
            android:id="@+id/ResendBtn"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:textColor="@color/primary"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
